--- a/auth/reset-password.html
+++ b/auth/reset-password.html
@@ -6,9 +6,9 @@
         <link rel="shortcut icon" href="/assets/img/stanbic icon.png" type="image/svg">
         <title>STANBIC IBTC BANK PLC</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <script src="js/script.js" defer></script>
-        <script src="js/auth.js" defer></script>
+        <link rel="stylesheet" href="/css/styles.css">
+        <script src="/js/script.js" defer></script>
+        <script src="/js/auth.js" defer></script>
     </head>
 <body>
     <main class="container">
