updated the dasboard

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class=" password_recovery">
                         <a href="auth/reset-password.html" class="forgot_password">Forgot Password?</a>
                     </div>
-                    <button class="btn login_btn blue_primary-btn">Login</button>
+                    <button class="btn login_btn blue_primary-btn" id="acctLogin">Login</button>
                     <div class="new_user-register">
                         <a href="#" class="register_link">Register for internet banking</a>
                     </div>
